# concord

./: .dockerignore  .gitignore  .lgtm.yml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  bootstrap.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
concord/: __init__.py  client.py  context.py  extension.py  middleware.py  utils.py
concord/ext/base/: __init__.py  event.py
hugo/: __init__.py  __main__.py  bot.py  client.py  command.py  context.py  exceptions.py  handler.py  middleware.py
hugo/core/: __init__.py  client.py  context.py  exceptions.py  extension.py  handler.py  middleware.py  utils.py
hugo/ext/base/: __init__.py  channel.py  event.py  pattern.py  user.py
hugo/ext/base/filters/: __init__.py  command.py  common.py
hugo/groups/: __init__.py  music.py  status.py
scripts/: requirements.py
tests/: conftest.py  helpers.py  test_handler.py  test_middleware.py
tests/core/: conftest.py  test_client.py  test_context.py  test_utils.py
tests/core/extension/: test_extension.py  test_manager.py
tests/core/middleware/: conftest.py  test_all_of_all.py  test_middleware.py  test_middleware_chain.py  test_middleware_collection.py  test_middleware_function.py  test_middleware_result.py  test_middleware_sequence.py  test_middleware_state.py  test_one_of_all.py
tests/ext/base/: test_event.py
tests/ext/base/filters/: test_command.py
tests/ext/base/filters/common/: test_bot_filter.py  test_channel_type_filter.py  test_event_type_filter.py  test_pattern_filter.py
