[tool.poetry]
name = "hugo-core"
version = "0.8.0"
description = "Core library for Hugo"
authors = ["Nariman Safiulin <woofilee@gmail.com>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/Roolat/hugo-core"

keywords = ["discord", "bot", "hugo", "core"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "hugo" },
]

[tool.poetry.dependencies]
python = "^3.6"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "rewrite" }

[tool.poetry.dev-dependencies]
black = "^18.3-alpha.0"
codecov = "^2.0"
coverage = "^4.5"
pre-commit = "^1.10"
pytest = "^3.8"
pytest-asyncio = "^0.9.0"
pytest-cov = "^2.5"
sphinx = "^1.8"
sphinx_rtd_theme = "^0.4.1"
sphinxcontrib-asyncio = "^0.2.0"
sphinxcontrib-napoleon = "^0.7"

[tool.black]
line-length = 80
py36 = true
